--- a/public/visitor.html
+++ b/public/visitor.html
@@ -15,6 +15,7 @@
         <h1>Live Wordcloud — Participante</h1>
         <p>Conectado a la sesión: <strong id="sessionId"></strong></p>
 
+        <p><strong>Pregunta:</strong> <span id="question"></span></p>
 
         <div class="inputRow">
             <input id="wordsInput" placeholder="Máx 3 palabras" />
