--- a/public/index.html
+++ b/public/index.html
@@ -76,6 +76,13 @@
         #newQuestionBtn {
             display: none;
         }
+
+        #currentQuestion {
+            font-size: 1.2em;
+            font-weight: bold;
+            margin: 15px 0;
+            color: #333;
+        }
     </style>
 </head>
 
@@ -93,6 +100,7 @@
             </div>
         </div>
 
+        <p>Pregunta actual: <span id="currentQuestion">N/A</span></p>
         <p>Participantes: <span id="count">0</span></p>
         <p>Palabras enviadas: <span id="wordCount">0</span></p>
 
