--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
             </div>
         </div>
 
-        <p>Pregunta actual: <span id="currentQuestion">N/A</span></p>
+        <p>Pregunta actual: <span id="question">N/A</span></p>
         <p>Participantes: <span id="count">0</span></p>
         <p>Palabras enviadas: <span id="wordCount">0</span></p>
 
