--- a/public/visitor.html
+++ b/public/visitor.html
@@ -55,10 +55,10 @@
 
         #wordsInput {
             flex: 1;
-            padding: 10px 15px;
             font-size: 1.1rem;
             border-radius: 8px;
             border: 1px solid #ccc;
+            padding: 8px 12px;
             transition: border 0.3s;
         }
 
@@ -139,7 +139,6 @@
     </main>
 
     <script>
-        // rol visitante y sessionId
         window.APP_ROLE = 'visitor';
 
         const url = new URL(location.href);
@@ -152,7 +151,6 @@
             const h = location.hash.split('/');
             sid = h[h.length - 1];
         }
-
         document.getElementById('sessionId').textContent = sid || 'N/A';
         window.FORCED_SESSION = sid;
     </script>
@@ -161,7 +159,7 @@
     <script src="/app.js"></script>
 
     <script>
-        // Efecto impresionante de nueva pregunta (opcional extra)
+        // Efecto impresionante de nueva pregunta
         const questionEl = document.getElementById('question');
         socket.on('question', q => {
             if (!questionEl) return;
