--- a/public/visitor.html
+++ b/public/visitor.html
@@ -58,7 +58,7 @@
             font-size: 1.1rem;
             border-radius: 8px;
             border: 1px solid #ccc;
-            padding: 8px 12px;
+
             transition: border 0.3s;
         }
 
@@ -135,7 +135,7 @@
 
         <p>Participantes: <span id="count">0</span></p>
 
-        <canvas id="cloud"></canvas>
+        <canvas id="cloud" style="display:none"></canvas>
     </main>
 
     <script>
