--- a/public/index.html
+++ b/public/index.html
@@ -92,17 +92,15 @@
 
         <div class="controls">
             <button id="createBtn">Crear sesión</button>
-            <button id="newQuestionBtn">Nueva pregunta</button>
             <div id="sessionBox" class="hidden">
                 <p>Session ID: <strong id="sessionId"></strong></p>
                 <div id="qrcode"></div>
-                <p>URL: <code id="sessionUrl"></code></p>
             </div>
+            <button id="newQuestionBtn">Nueva pregunta</button>
         </div>
-
+        <p>URL: <code id="sessionUrl"></code></p>
         <p>Pregunta actual: <span id="question">N/A</span></p>
-        <p>Participantes: <span id="count">0</span></p>
-        <p>Palabras enviadas: <span id="wordCount">0</span></p>
+        <p>Participantes: <span id="count">0</span> | Palabras enviadas: <span id="wordCount">0</span></p>
 
         <canvas id="cloud" width="800" height="600"></canvas>
     </main>
