--- a/public/visitor.html
+++ b/public/visitor.html
@@ -124,9 +124,9 @@
 <body>
     <main class="card">
         <h1>Live Wordcloud — Participante</h1>
-        <p>Conectado a la sesión: <strong id="sessionId"></strong></p>
+        <p style="display: none">Conectado a la sesión: <strong id="sessionId"></strong></p>
 
-        <p><strong>Pregunta:</strong> <span id="question"></span></p>
+        <p><strong>Pregunta:<span id="question"></span></strong> </p>
 
         <div class="inputRow">
             <input id="wordsInput" placeholder="Máx 2 palabras" />
