--- a/public/visitor.html
+++ b/public/visitor.html
@@ -135,7 +135,7 @@
 
         <p>Participantes: <span id="count">0</span></p>
 
-        <canvas id="cloud" style="display:none"></canvas>
+        <canvas id="cloud" style="display:none !important"></canvas>
     </main>
 
     <script>
