--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@
             </div>
             <button id="newQuestionBtn">Nueva pregunta</button>
         </div>
-        <p>URL: <code id="sessionUrl"></code></p>
+        <p>URL: <a id="sessionUrl"></a></p>
         <p style="font-weight: bold;">Pregunta actual: <span id="question">N/A</span></p>
         <p>Participantes: <span id="count">0</span> | Palabras enviadas: <span id="wordCount">0</span></p>
 
