--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,10 @@
         }
 
         h1 {
+            text-align: center;
             margin-bottom: 20px;
-            font-size: 1.8em;
+            font-weight: 700;
+            color: #1a73e8;
         }
 
         .controls {
