--- a/public/index.html
+++ b/public/index.html
@@ -106,14 +106,15 @@
         <p>Participantes: <span id="count">0</span> | Palabras enviadas: <span id="wordCount">0</span></p>
 
         <canvas id="cloud" width="800" height="600"></canvas>
+        <footer
+            style="text-align: center; padding: 15px 0; font-family: 'Roboto', sans-serif; font-size: 0.9rem; color: #666;">
+            Creado por <a href="https://www.linkedin.com/in/carlosserranosanchez/" target="_blank"
+                style="color: #1a73e8; text-decoration: none; transition: color 0.3s;">
+                Carlos Serrano
+            </a>
+        </footer>
     </main>
-    <footer
-        style="text-align: center; padding: 15px 0; font-family: 'Roboto', sans-serif; font-size: 0.9rem; color: #666;">
-        <a href="https://www.linkedin.com/in/carlosserranosanchez/" target="_blank"
-            style="color: #1a73e8; text-decoration: none; transition: color 0.3s;">
-            Carlos Serrano
-        </a>
-    </footer>
+
 
     <script>
         window.APP_ROLE = 'organizer';
