--- a/public/visitor.html
+++ b/public/visitor.html
@@ -126,14 +126,15 @@
         <p>Participantes: <span id="count">0</span></p>
 
         <canvas id="cloud" style="display:none !important"></canvas>
+        <footer
+            style="text-align: center; padding: 15px 0; font-family: 'Roboto', sans-serif; font-size: 0.9rem; color: #666;">
+            Creado por <a href="https://www.linkedin.com/in/carlosserranosanchez/" target="_blank"
+                style="color: #1a73e8; text-decoration: none; transition: color 0.3s;">
+                Carlos Serrano
+            </a>
+        </footer>
     </main>
-    <footer
-        style="text-align: center; padding: 15px 0; font-family: 'Roboto', sans-serif; font-size: 0.9rem; color: #666;">
-        <a href="https://www.linkedin.com/in/carlosserranosanchez/" target="_blank"
-            style="color: #1a73e8; text-decoration: none; transition: color 0.3s;">
-            Carlos Serrano
-        </a>
-    </footer>
+
 
     <!-- SOLO ESTO (no duplicamos sid) -->
     <script>
