--- a/public/visitor.html
+++ b/public/visitor.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Live Wordcloud — Participante</title>
+    <link rel="icon" type="image/x-icon" href="/logo.ico">
 
     <!-- CSS básico -->
     <style>
@@ -113,7 +114,9 @@
 
 <body>
     <main class="card">
-        <h1>Live Wordcloud — Participante</h1>
+        <div style="text-align: center;">
+            <img src="/logo.png" alt="Logo" style="width: 50%; max-width: 100%; height: auto;">
+        </div>
         <p style="display: none">Conectado a la sesión: <strong id="sessionId"></strong></p>
 
         <p><strong>Pregunta:<span id="question"></span></strong> </p>
