--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="/logo.ico">
     <title>Organizador — Live Wordcloud</title>
     <link rel="stylesheet" href="/style.css">
     <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
@@ -91,7 +92,9 @@
 
 <body>
     <main class="card">
-        <h1>Live Wordcloud — Organizador</h1>
+        <div style="text-align: center;">
+            <img src="/logo.png" alt="Logo" style="width: 50%; max-width: 100%; height: auto;">
+        </div>
 
         <div class="controls">
             <button id="createBtn">Crear nube</button>
