--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,7 @@
 <body>
     <main class="card">
         <div style="text-align: center;">
-            <img src="/logo.png" alt="Logo" style="width: 50%; max-width: 100%; height: auto;">
+            <img src="/logo.png" alt="Logo" style="width: 50%; max-width: 100%; height: auto; max-width: 300px;">
         </div>
 
         <div class="controls">
