--- a/public/visitor.html
+++ b/public/visitor.html
@@ -119,7 +119,7 @@
         </div>
         <p style="display: none">Conectado a la sesión: <strong id="sessionId"></strong></p>
 
-        <p><strong>Pregunta:<span id="question"></span></strong> </p>
+        <h1><strong>Pregunta:<span id="question"></span></strong> </h1>
 
         <div class="inputRow">
             <input id="wordsInput" placeholder="Máx 2 palabras" />
