--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
             <button id="newQuestionBtn">Nueva pregunta</button>
         </div>
         <p>URL: <a id="sessionUrl"></a></p>
-        <p style="font-weight: bold;">Pregunta actual: <span id="question">N/A</span></p>
+        <h1 style="font-weight: bold;">Pregunta actual: <span id="question">N/A</span></h1>
         <p>Participantes: <span id="count">0</span> | Palabras enviadas: <span id="wordCount">0</span></p>
 
         <canvas id="cloud" width="800" height="600"></canvas>
