--- a/public/visitor.html
+++ b/public/visitor.html
@@ -90,7 +90,6 @@
         }
 
         #question {
-            font-size: 1.2rem;
             display: inline-block;
             padding: 5px 10px;
             border-radius: 6px;
@@ -122,7 +121,7 @@
         <h1><strong>Pregunta:<span id="question"></span></strong> </h1>
 
         <div class="inputRow">
-            <input id="wordsInput" placeholder="Máx 2 palabras" />
+            <input id="wordsInput" placeholder="Máx 2 palabras" maxlength="50" />
             <button id="sendBtn">Enviar</button>
         </div>
 
