--- a/public/index.html
+++ b/public/index.html
@@ -87,6 +87,7 @@
         }
 
         .help-icon {
+            float: right;
             display: inline-block;
             margin-left: 8px;
             color: #1a73e8;
