--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         }
 
         main.card {
-            max-width: 1200px;
+            width: 100%;
             margin: 20px auto;
             background: #fff;
             border-radius: 12px;
@@ -69,8 +69,7 @@
 
         #cloud {
             width: 100%;
-            max-width: 1200px;
-            height: 600px;
+            height: 100%;
             margin: 20px auto;
             display: block;
             border: 1px solid #ddd;
@@ -161,7 +160,7 @@
         <h1 style="font-weight: bold;">Pregunta actual: <span id="question">N/A</span></h1>
         <p>Participantes: <span id="count">0</span> | Palabras enviadas: <span id="wordCount">0</span></p>
 
-        <canvas id="cloud" width="800" height="600"></canvas>
+        <canvas id="cloud"></canvas>
         <footer
             style="text-align: center; padding: 15px 0; font-family: 'Roboto', sans-serif; font-size: 0.9rem; color: #666;">
             Creado por <a href="https://www.linkedin.com/in/carlosserranosanchez/" target="_blank"
