--- a/public/visitor.html
+++ b/public/visitor.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Live Wordcloud — Participante</title>
+    <title>Wordcloud — Participante</title>
     <link rel="icon" type="image/x-icon" href="/logo.ico">
 
     <!-- CSS básico -->
