--- a/public/index.html
+++ b/public/index.html
@@ -110,9 +110,7 @@
             border-color: transparent transparent #1a73e8 transparent;
         }
 
-        /* --------------------------- */
-        /* PANEL QR + CANVAS LAYOUT   */
-        /* --------------------------- */
+        /* PANEL QR + CANVAS LAYOUT */
         .cloud-wrapper {
             display: flex;
             width: 100%;
@@ -130,7 +128,6 @@
             transition: all 0.35s ease;
         }
 
-        /* Panel QR */
         .qr-panel {
             width: 0;
             overflow: hidden;
@@ -155,7 +152,6 @@
             height: 220px;
         }
 
-        /* Botón plegable */
         .toggle-btn {
             position: absolute;
             left: -28px;
@@ -198,7 +194,7 @@
             <div id="sessionBox" class="hidden">
                 <p style="display: none">Session ID: <strong id="sessionId"></strong></p>
             </div>
-            <button id="newQuestionBtn">Nueva pregunta</button>
+            <button id="newQuestionBtn" style="display:none;">Nueva pregunta</button>
         </div>
 
         <p>URL: <a id="sessionUrl"></a></p>
@@ -256,9 +252,7 @@
             if (!helpIcon.contains(e.target) && !tooltip.contains(e.target))
                 tooltip.style.display = 'none';
         });
-    </script>
 
-    <script>
         /* PANEL QR DESPLEGABLE */
         const qrPanel = document.getElementById('qrPanel');
         const toggleQR = document.getElementById('toggleQR');
@@ -276,9 +270,7 @@
             qrPanel.classList.add("open");
             toggleQR.textContent = "⮜";
         });
-    </script>
 
-    <script>
         window.APP_ROLE = 'organizer';
     </script>
 
