--- a/public/index.html
+++ b/public/index.html
@@ -118,7 +118,8 @@
         }
 
         #cloud {
-            flex: 1;
+            flex-grow: 1;
+            flex-basis: 100%;
             height: 100%;
             border: 1px solid #ddd;
             border-radius: 8px;
@@ -126,23 +127,23 @@
         }
 
         .qr-panel {
-            width: 0;
+            flex-basis: 0;
             overflow: hidden;
             background: #fafafa;
             border-left: 1px solid #ddd;
-            border-radius: 0 8px 8px 0;
             display: flex;
             flex-direction: column;
             align-items: center;
-            transition: all 0.35s ease;
+            transition: flex-basis 0.35s ease;
             padding-top: 20px;
             position: relative;
         }
 
         .qr-panel.open {
-            width: 30%;
+            flex-basis: 30%;
             min-width: 260px;
         }
+
 
         #qrcode {
             width: 220px;
