--- a/public/index.html
+++ b/public/index.html
@@ -107,40 +107,40 @@
             border-color: transparent transparent #1a73e8 transparent;
         }
 
-        /* PANEL QR + CANVAS LAYOUT */
+        /* CLOUD + QR PANEL */
         .cloud-wrapper {
             display: flex;
             width: 100%;
+            max-width: 100%;
             height: 450px;
-            transition: all 0.35s ease;
-            position: relative;
             margin-top: 20px;
+            position: relative;
         }
 
         #cloud {
             flex-grow: 1;
-            flex-basis: 100%;
             height: 100%;
             border: 1px solid #ddd;
-            border-radius: 8px;
+            border-radius: 8px 0 0 8px;
             transition: all 0.35s ease;
         }
 
         .qr-panel {
-            flex-basis: 0;
+            width: 0;
+            min-width: 0;
             overflow: hidden;
             background: #fafafa;
             border-left: 1px solid #ddd;
             display: flex;
             flex-direction: column;
             align-items: center;
-            transition: flex-basis 0.35s ease;
+            transition: width 0.35s ease, min-width 0.35s ease;
             padding-top: 20px;
             position: relative;
         }
 
         .qr-panel.open {
-            flex-basis: 30%;
+            width: 30%;
             min-width: 260px;
         }
 
@@ -151,17 +151,20 @@
 
         .toggle-btn {
             position: absolute;
-            left: -28px;
             top: 10px;
-            width: 26px;
-            height: 26px;
+            right: 100%;
+            width: 28px;
+            height: 28px;
             border-radius: 50%;
             border: none;
             background: #1a73e8;
             color: white;
+            font-size: 16px;
             cursor: pointer;
-            font-size: 14px;
             z-index: 10;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             transition: transform 0.25s;
         }
 
@@ -216,16 +219,14 @@
             </span>
         </p>
 
-        <!-- WRAPPER CANVAS + PANEL QR -->
         <div id="cloudWrapper" class="cloud-wrapper">
             <canvas id="cloud"></canvas>
 
             <aside id="qrPanel" class="qr-panel">
                 <div id="qrcode"></div>
+                <!-- Botón toggle ahora dentro del panel, al lado -->
+                <button id="toggleQR" class="toggle-btn">⯈</button>
             </aside>
-
-            <!-- Botón toggle fuera del panel -->
-            <button id="toggleQR" class="toggle-btn">⮞</button>
         </div>
 
         <footer style="text-align: center; padding: 15px 0; font-size: 0.9rem; color: #666;">
@@ -238,24 +239,20 @@
     </main>
 
     <script>
-        /* TOOLTIP AYUDA */
         const helpIcon = document.getElementById('helpIcon');
         const tooltip = document.getElementById('tooltip');
 
         helpIcon.addEventListener('click', () => {
-            tooltip.style.display = tooltip.style.display === 'block'
-                ? 'none'
-                : 'block';
+            tooltip.style.display = tooltip.style.display === 'block' ? 'none' : 'block';
         });
 
         document.addEventListener('click', (e) => {
-            if (!helpIcon.contains(e.target) && !tooltip.contains(e.target))
-                tooltip.style.display = 'none';
+            if (!helpIcon.contains(e.target) && !tooltip.contains(e.target)) tooltip.style.display = 'none';
         });
 
-        /* PANEL QR DESPLEGABLE */
         const qrPanel = document.getElementById('qrPanel');
         const toggleQR = document.getElementById('toggleQR');
+        const cloud = document.getElementById('cloud');
 
         function updateCanvasSize() {
             if (window.lastCloudData) renderWordCloud(window.lastCloudData);
@@ -263,13 +260,13 @@
 
         toggleQR.addEventListener('click', () => {
             const isOpen = qrPanel.classList.toggle('open');
-            toggleQR.textContent = isOpen ? "⮜" : "⮞";
+            toggleQR.textContent = isOpen ? '⯇' : '⯈';
             setTimeout(updateCanvasSize, 360);
         });
 
-        document.addEventListener("qr-loaded", () => {
-            qrPanel.classList.add("open");
-            toggleQR.textContent = "⮜";
+        document.addEventListener('qr-loaded', () => {
+            qrPanel.classList.add('open');
+            toggleQR.textContent = '⯇';
             updateCanvasSize();
         });
 
