--- a/public/index.html
+++ b/public/index.html
@@ -119,6 +119,7 @@
 
         #cloud {
             flex-grow: 1;
+            flex-basis: 100%;
             height: 100%;
             border: 1px solid #ddd;
             border-radius: 8px 0 0 8px;
@@ -152,7 +153,8 @@
         .toggle-btn {
             position: absolute;
             top: 10px;
-            right: 100%;
+            left: -28px;
+            /* al lado del QR */
             width: 28px;
             height: 28px;
             border-radius: 50%;
@@ -161,10 +163,10 @@
             color: white;
             font-size: 16px;
             cursor: pointer;
-            z-index: 10;
             display: flex;
             align-items: center;
             justify-content: center;
+            z-index: 10;
             transition: transform 0.25s;
         }
 
@@ -224,9 +226,10 @@
 
             <aside id="qrPanel" class="qr-panel">
                 <div id="qrcode"></div>
-                <!-- Botón toggle ahora dentro del panel, al lado -->
-                <button id="toggleQR" class="toggle-btn">⯈</button>
             </aside>
+
+            <!-- Botón toggle siempre visible al lado del QR -->
+            <button id="toggleQR" class="toggle-btn">⯈</button>
         </div>
 
         <footer style="text-align: center; padding: 15px 0; font-size: 0.9rem; color: #666;">
@@ -258,16 +261,18 @@
             if (window.lastCloudData) renderWordCloud(window.lastCloudData);
         }
 
+        // Toggle manual
         toggleQR.addEventListener('click', () => {
             const isOpen = qrPanel.classList.toggle('open');
             toggleQR.textContent = isOpen ? '⯇' : '⯈';
             setTimeout(updateCanvasSize, 360);
         });
 
+        // Abrir QR automáticamente al cargar QR
         document.addEventListener('qr-loaded', () => {
             qrPanel.classList.add('open');
             toggleQR.textContent = '⯇';
-            updateCanvasSize();
+            setTimeout(updateCanvasSize, 360);
         });
 
         window.APP_ROLE = 'organizer';
